# Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parcer.h  primitive.h  sphere.h  tinyxml2.cpp  tinyxml2.h  vec3.h
Scene Files/: scene_01.xml  scene_02.xml  scene_03.xml  scene_04.xml  scene_05.xml
includes/RTEngine/: DepthMapIntegrator.h  FlatIntegrator.h  Integrator.h  Material.h  NormalMapIntegrator.h  primitive.h  sphere.h
includes/RTEngine/Integrators/: BlinnPhongIntegrator.h  DepthMapIntegrator.h  FlatIntegrator.h  Integrator.h
includes/RTEngine/Materials/: BlinnPhongMaterial.h  Material.h  NormalMapIntegrator.h
includes/RTEngine/Objects/: Surfel.h  bounds3.h  primitive.h
includes/RTEngine/Scene/: Ambient.h  Background.h  Camera.h  Film.h  Scene.h
includes/RTUtilities/: RunningOptions.h  parcer.h
includes/Vector/: ray.h  vec3.h
source/: main.cpp  tinyxml2.cpp
